WDZO-736: User file errors processing fixed
Squashed commit of the following:

commit 66d789d441542d759f0ab891b1a05cb9ec47a244
Author: Morozov-MV <morozov.m.vyac@sberbank.ru>
Date:   Thu Oct 1 15:31:58 2020 +0300

    WDZO-736: Code style fixed

commit c2bd5d4aa9a6657c6641f07b80724f1a09d25b34
Author: Morozov-MV <morozov.m.vyac@sberbank.ru>
Date:   Thu Oct 1 11:23:26 2020 +0300

    WDZO-736: User file errors processing fixed

--- a/src/containers/UsersPage/UsersPage.module.css
+++ b/src/containers/UsersPage/UsersPage.module.css
@@ -16,7 +16,8 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    padding-left: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .successBlock p {
@@ -40,6 +41,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-wrap: break-word;
+    hyphens: auto;
 }
 
 .userForm__field {
@@ -80,7 +83,7 @@
 .userForm__button, .successBlock__button{
     position: relative;
     padding: 8px 30px;
-    bottom: -50px;
+    bottom: -20px;
     display: inline-block;
 }
 
@@ -105,7 +108,10 @@
     margin-top: 10px;
     color: #f6650a;
     font-family: Roboto;
-    padding-left: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    overflow-wrap: break-word;
+    width: 95%;
 }
 .template__link {
     padding-left: 5px;
